improve look of nebula

--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,7 @@
 	</head>
 	<body>
 		<script type='text/javascript' src='/main.js'></script>
+		<script src="js/impress.js"></script>
+		<script>impress().init();</script>
 	</body>
 </html>
